--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "angular-in-memory-web-api": "^0.18.0",
     "bootstrap": "^5.3.3",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
